--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-dom": "^16.4.2",
     "react-test-renderer": "^16.4.2",
     "semantic-ui-react": "^0.82.2",
+    "sinon": "^6.1.5",
     "size-limit": "^0.19.1",
     "ts-jest": "^23.1.3",
     "tslint": "^5.11.0",
