--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,18 @@
 language: node_js
 
+node_js:
+  - '9'
+  - '8'
+  - '7'
+
+before_install:
+  - 'nvm install-latest-npm'
+
 cache:
   yarn: true
   directories:
     - $HOME/.npm
 
-node_js:
-  - stable
 install:
   - yarn install
 script:
