--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "build": "rm -rf ./dist && tsc",
     "lint": "tslint -c tslint.json --project tsconfig.json",
     "test": "jest",
-    "test:coverage": "jest --coverage && cat ./coverage/lcov.info | coveralls",
+    "test:coverage": "jest --coverage",
     "prepare": "yarn build",
     "storybook": "start-storybook -p 6006 -c .storybook",
     "size": "size-limit",
