--- a/package.json
+++ b/package.json
@@ -25,11 +25,11 @@
   "scripts": {
     "prepare": "yarn build",
     "build": "rm -rf ./dist && tsc",
-    "lint": "tslint -c tslint.json --project tsconfig.json",
+    "lint": "yarn run lint-prettier",
+    "lint-prettier": "prettier --config .prettierrc -l 'src/**/*.ts*' || (echo \nThese files are not formatted correctly && false)",
+    "prettier": "prettier --config .prettierrc --write 'src/**/*.ts*'",
     "test": "jest",
     "test:coverage": "jest --coverage",
-    "size": "size-limit",
-    "size:why": "size-limit --why",
     "storybook": "start-storybook -p 6006 -c .storybook",
     "storybook:build": "build-storybook -c .storybook -o .out",
     "storybook:deploy": "storybook-to-ghpages --existing-output-dir=.out"
@@ -64,22 +64,22 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "coveralls": "^3.0.2",
-    "enzyme": "^3.4.1",
-    "enzyme-adapter-react-16": "^1.2.0",
+    "enzyme": "^3.5.0",
+    "enzyme-adapter-react-16": "^1.3.1",
     "enzyme-to-json": "^3.3.4",
     "jest": "^23.5.0",
     "moment": "2.22.2",
+    "prettier": "^1.14.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-test-renderer": "^16.4.2",
-    "semantic-ui-react": "^0.82.2",
+    "semantic-ui-react": "^0.82.3",
     "sinon": "^6.1.5",
-    "size-limit": "^0.19.1",
-    "ts-jest": "^23.1.3",
+    "ts-jest": "^23.1.4",
     "tslint": "^5.11.0",
-    "tslint-config-prettier": "^1.14.0",
+    "tslint-config-prettier": "^1.15.0",
     "tslint-react": "^3.6.0",
-    "typescript": "^3.0.1"
+    "typescript": "^3.0.3"
   },
   "jest": {
     "setupFiles": [
