--- a/package.json
+++ b/package.json
@@ -1,18 +1,25 @@
 {
   "name": "react-big-list",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "Smart wrapper component for your big collections.",
   "main": "dist/index.js",
-  "types": "dist/types.tsx",
+  "module": "dist/react-big-list.esm.js",
+  "typings": "dist/index.d.ts",
   "author": "Meemaw <ematej.snuderl@gmail.com>",
   "license": "MIT",
   "keywords": [
-    "Collections",
-    "Smart",
-    "Pagination",
-    "Sorting",
-    "Filtering",
-    "Caching"
+    "react-big-list",
+    "react",
+    "react-dom",
+    "lists",
+    "tables",
+    "sorting",
+    "pagination",
+    "filtering",
+    "caching"
+  ],
+  "files": [
+    "dist"
   ],
   "homepage": "https://github.com/Meemaw/react-big-list#readme",
   "repository": {
@@ -22,9 +29,12 @@
   "bugs": {
     "url": "https://github.com/Meemaw/react-big-list/issues"
   },
+  "peerDependencies": {
+    "react": ">=15"
+  },
   "scripts": {
     "prepare": "yarn build",
-    "build": "rm -rf ./dist && tsc",
+    "build": "cross-env NODE_ENV=production tsc -p tsconfig.base.json  && rollup -c && rimraf compiled && cp ./index.js ./dist/index.js",
     "lint": "yarn run lint-prettier",
     "lint-prettier": "prettier --config .prettierrc -l 'src/**/*.ts*' || (echo \nThese files are not formatted correctly && false)",
     "prettier": "prettier --config .prettierrc --write 'src/**/*.ts*'",
@@ -64,6 +74,7 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "coveralls": "^3.0.2",
+    "cross-env": "^5.2.0",
     "enzyme": "^3.5.0",
     "enzyme-adapter-react-16": "^1.3.1",
     "enzyme-to-json": "^3.3.4",
@@ -73,6 +84,14 @@
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-test-renderer": "^16.4.2",
+    "rimraf": "^2.6.2",
+    "rollup": "^0.59.0",
+    "rollup-plugin-commonjs": "^9.1.3",
+    "rollup-plugin-filesize": "1.4.2",
+    "rollup-plugin-node-resolve": "^3.3.0",
+    "rollup-plugin-replace": "^2.0.0",
+    "rollup-plugin-sourcemaps": "^0.4.2",
+    "rollup-plugin-uglify": "^3.0.0",
     "semantic-ui-react": "^0.82.3",
     "sinon": "^6.1.5",
     "ts-jest": "^23.1.4",
@@ -100,5 +119,19 @@
       "\\.(ts|tsx)$": "ts-jest"
     },
     "testRegex": "/tests/.*.(spec).(tsx)$"
-  }
+  },
+  "size-limit": [
+    {
+      "path": "./dist/index.js",
+      "limit": "3 kB"
+    },
+    {
+      "path": "./dist/formik.esm.js",
+      "limit": "3 kB"
+    },
+    {
+      "path": "./dist/formik.umd.production.js",
+      "limit": "3 kB"
+    }
+  ]
 }
