--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "lint-prettier": "prettier --config .prettierrc -l 'src/**/*.ts*' || (echo \nThese files are not formatted correctly && false)",
     "prettier": "prettier --config .prettierrc --write 'src/**/*.ts*'",
     "test": "jest",
+    "contributors:add": "all-contributors add",
+    "contributors:generate": "all-contributors generate",
     "test:coverage": "jest --coverage",
     "storybook": "start-storybook -p 6006 -c .storybook",
     "storybook:build": "build-storybook -c .storybook -o .out",
@@ -70,6 +72,7 @@
     "@types/storybook__addon-notes": "^3.3.0",
     "@types/storybook__addon-options": "^3.2.0",
     "@types/storybook__react": "^3.0.6",
+    "all-contributors-cli": "^5.4.0",
     "awesome-typescript-loader": "^4.0.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
